--- a/BinaryHarmonicAnalysis/BinaryHarmonicAnalysis.csproj
+++ b/BinaryHarmonicAnalysis/BinaryHarmonicAnalysis.csproj
@@ -50,5 +50,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="sourse\" />
+    <Folder Include="tests\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
