--- a/HarmonicAnalysis/HarmonicAnalysis.csproj
+++ b/HarmonicAnalysis/HarmonicAnalysis.csproj
@@ -52,5 +52,9 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="source\" />
+    <Folder Include="tests\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
