--- a/BinaryHarmonicAnalysis/BinaryHarmonicAnalysis.csproj
+++ b/BinaryHarmonicAnalysis/BinaryHarmonicAnalysis.csproj
@@ -51,8 +51,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="sourse\" />
     <Folder Include="tests\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="sourse\BuildWalshMatrix_py.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
