--- a/BinaryHarmonicAnalysis/BinaryHarmonicAnalysis.csproj
+++ b/BinaryHarmonicAnalysis/BinaryHarmonicAnalysis.csproj
@@ -51,7 +51,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="sourse\" />
+    <Folder Include="source\" />
     <Folder Include="tests\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
