Добавление старой реализации в источник

--- a/HarmonicAnalysis/HarmonicAnalysis.csproj
+++ b/HarmonicAnalysis/HarmonicAnalysis.csproj
@@ -54,6 +54,7 @@
     <Compile Include="HarmonicAnalysis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="source\DFF.cs" />
+    <Compile Include="source\FFTOldImplementation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
