--- a/ModernComputerTechnologies/ModernComputerTechnologies.csproj
+++ b/ModernComputerTechnologies/ModernComputerTechnologies.csproj
@@ -49,12 +49,11 @@
     <Compile Include="ModernComputerTechnologies.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="source\9sem\Task3.cs" />
+    <Compile Include="tests\Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="tests\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
