Убрал лишнее, добавил отчет

--- a/HarmonicAnalysis/HarmonicAnalysis.csproj
+++ b/HarmonicAnalysis/HarmonicAnalysis.csproj
@@ -59,9 +59,8 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="source\VeselovA_118 Отчет по гармоническому анализу.pdf" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="tests\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
