#MCT_GUI  Промежуточный чекин: реализовал кейс комплексных чисел

--- a/ModernComputerTechnologiesGUI/ModernComputerTechnologiesGUI.csproj
+++ b/ModernComputerTechnologiesGUI/ModernComputerTechnologiesGUI.csproj
@@ -60,7 +60,7 @@
     <Compile Include="source\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Helpers.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="source\Form1.resx">
